# Arctus.ai

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  repos.yaml  requirements.txt
arctus/: __init__.py  agents.py  config.py  context.py  federation.py  llm.py  mcp.py  orchestrator.py  presets.py  rate_limit.py  sandbox.py  session.py  sona.py
scripts/: clone_repos.py
server/: app.py
web/: app.js  index.html  style.css
