[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arctus-ai"
version = "1.0.0"
description = "Local-first multi-agent orchestrator with MCP federation, 100-agent roster, 80% handoff cycle. Plan -> Validate -> Execute -> Verify."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Arctus.ai" }]
keywords = [
    "multi-agent", "orchestrator", "llm", "openai-compatible", "ollama",
    "openrouter", "omniroute", "mcp", "model-context-protocol", "cli",
    "federation", "swarm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]"]
yaml = ["pyyaml"]

[project.scripts]
arctus = "main:main"

[tool.setuptools]
packages = ["arctus", "server"]
py-modules = ["main"]
